tests/cmp/dc-label-empty.trp
let val x = 42 raisedTo `<>`
in printWithLabels x
end